--- a/語言規範.md
+++ b/語言規範.md
@@ -44,7 +44,7 @@ const PI = 3.1415  // 常數
   
 - **內置錯誤型別 error**  
   Glux 內置錯誤型別 **error**，用於表示錯誤狀態與錯誤訊息，通常與 union 搭配使用實現錯誤處理。
-
+  
 - **集合型別支援異質性**  
   集合型別（如 tuple、list、array、map）不需要指定內部元素型別，允許同時存放不同型別的值。例如：
   ```rust
@@ -114,73 +114,36 @@ for key, value in {"a": 1, "b": 2} {
 ## 2. 運算符定義
 
 ### 算術運算符
-- **`+`**  
-  - 執行加法運算或字串串接。
-  - 例如：
-    ```rust
-    a := 10 + 20        // 結果 30
-    greeting := "Hello, " + "World!"  // 輸出 "Hello, World!"
-    ```
-- **`-`**  
-  - 執行減法運算。
-  - 例如：
-    ```rust
-    diff := 20 - 5       // 結果 15
-    ```
-- **`*`**  
-  - 執行乘法運算。
-  - 例如：
-    ```rust
-    product := 5 * 3     // 結果 15
-    ```
-- **`/`**  
-  - 執行除法運算（整數或浮點數）。
-  - 例如：
-    ```rust
-    quotient := 20 / 4   // 結果 5
-    ```
-- **`%`**  
-  - 計算除法餘數。
-  - 例如：
-    ```rust
-    remainder := 20 % 3  // 結果 2
-    ```
+- **`+`**：加法或字串串接。
+- **`-`**：減法。
+- **`*`**：乘法。
+- **`/`**：除法。
+- **`%`**：取餘。
 
 ### 比較運算符
-- **`==`**、**`!=`**、**`<`**、**`<=`**、**`>`**、**`>=`**  
-  - 用於檢查相等與大小比較。
+- **`==`**、**`!=`**、**`<`**、**`<=`**、**`>`**、**`>=`**：檢查相等與大小關係。
 
 ### 邏輯運算符
-- **`and`** 或 **`&&`**  
-  - 邏輯與。
-- **`or`** 或 **`||`**  
-  - 邏輯或。
-- **`not`** 或 **`!`**  
-  - 邏輯非。
+- **`and`** 或 **`&&`**：邏輯與。
+- **`or`** 或 **`||`**：邏輯或。
+- **`not`** 或 **`!`**：邏輯非。
 
 ### 位元運算符
-- **`&`**、**`|`**、**`^`**、**`~`**  
-  - 分別用於位元與、位元或、位元異或、位元取反。  
-  - 注意：當作取地址運算符時，`&` 用於取得變數指標。
+- **`&`**、**`|`**、**`^`**、**`~`**：分別用於位元與、或、異或、取反。  
+  - 當作取地址運算符時，`&` 用於取得變數指標。
 
 ### 位移運算符
-- **`<<`**、**`>>`**  
-  - 分別用於左移與右移。  
-  - 注意：對指標或低階資料進行位移運算必須在 `unsafe { }` 區塊中執行。
+- **`<<`**、**`>>`**：分別用於左移與右移。  
+  - 注意：必須在 `unsafe { }` 區塊中執行。
 
 ### 賦值運算符
-- **`:=`**  
-  - 用於宣告並初始化變數。
-- **`=`**  
-  - 用於對已宣告變數賦值（若語言規範允許）。
-- **複合賦值運算符**  
-  如 **`+=`**、**`-=`**、**`*=`**、**`/=`**、**`%=`** 等。
+- **`:=`**：宣告並初始化變數。
+- **`=`**：對已宣告變數賦值。
+- 複合賦值運算符，如 **`+=`**、**`-=`**、**`*=`**、**`/=`**、**`%=`**。
 
 ### 其他運算符
-- **`.`**（點運算子）  
-  - 用於存取結構體或其他複合型別的成員。若該成員為指標，Glux 會自動解參考。
-- **`,`**（逗號）  
-  - 用於分隔函式參數、tuple 成員等。
+- **`.`**：點運算子，用於存取結構體或複合型別成員，會自動解指標。
+- **`,`**：逗號，用於分隔參數、tuple 成員等。
 
 ---
 
@@ -198,7 +161,7 @@ for key, value in {"a": 1, "b": 2} {
 ### 3.2 `print()` 與 `println()`
 - **`print()`**：輸出字串但不換行。
 - **`println()`**：輸出字串並自動換行。
-- 支援 `${}` 字串插值；使用反引號（`）進行插值處理。
+- 支援 `${}` 字串插值；使用反引號（`）處理插值。
 
 #### 範例
 ```rust
@@ -214,9 +177,9 @@ println("List:", nums)
 - **字串串接**：使用 `+` 運算子串接字串。
   ```rust
   greeting := "Hello, " + "World!"
-  println(greeting)  // 輸出 "Hello, World!"
+  println(greeting)
   ```
-- **多行字串**：使用反引號定義多行字串，保留換行與空白。
+- **多行字串**：使用反引號定義，保留換行與空白。
   ```rust
   poem := `這是一首詩，
   可以跨多行，
@@ -243,17 +206,18 @@ struct User {
 ## 5. 函式與閉包
 
 ### 5.1 基本函式語法
-- 使用 `fn` 宣告函式，回傳型別使用 `->` 指定。
+- 使用 `fn` 宣告函式，回傳型別用 `->` 指定。
 - 可選回傳型別，若省略則根據 `return` 自動推導。
-- 支援預設參數。
+- 支援預設參數，且 **無預設值的參數必須放在有預設值的參數之前**；函數呼叫時允許使用關鍵字方式（例如 `param=value`）指定參數。
 - 函式可作為變數、參數與回傳值。
 
 #### 範例
 ```rust
-fn add(x: int, y: int) -> int {
-    return x + y
+fn greet(greeting: string, name: string = "Guest") -> string {
+    return greeting + ", " + name
 }
-println(add(2, 3))
+println(greet("Hello"))                  // 使用預設值，輸出 "Hello, Guest"
+println(greet("Hello", name="Alice"))      // 使用關鍵字參數，輸出 "Hello, Alice"
 ```
 
 ### 5.2 匿名函式（Lambda）
@@ -295,7 +259,7 @@ println(op(3, 5))
 ```
 
 ### 5.5 變數捕獲（Capturing）
-- 閉包可捕獲並修改外部變數；若閉包超出函式作用域，捕獲變數將存於堆區。
+- 閉包可捕獲並修改外部變數；若閉包超出函式作用域，捕獲變數存於堆區。
 
 #### 範例
 ```rust
@@ -350,7 +314,7 @@ println(map([1, 2, 3, 4], fn(x: int) -> int { return x * x }))
 ## 6. 併發機制
 
 - 使用 `spawn fn` 啟動輕量執行緒，類似 Goroutine。
-- 併發任務不會隱式等待，需使用 `await` 顯式同步。
+- 併發任務不會隱式等待，必須使用 `await` 顯式同步。
 - `await` 可同時等待多個任務（類似 Promise.all()）。
 
 #### 範例
@@ -438,47 +402,80 @@ for result in await tasks {
 
 ## 8. 參數傳遞語意
 
-- **值傳遞**：基本型別（如 int、float、bool）預設值傳遞（記憶體小、複製成本低）。
+- **值傳遞**：基本型別（如 int、float、bool）預設值傳遞（記憶體小，複製成本低）。
 - **引用傳遞**：複合型別（如 string、list、array、map、tuple、struct 等）預設引用傳遞，僅傳遞物件的引用，節省記憶體與提高效能。
 - 若有特殊需求，可透過顯式語法指定傳遞方式。
+- **函數參數預設值**：
+  - 允許函數參數具有預設值，提供預設值的參數在呼叫時可省略，但無預設值的參數必須放在有預設值參數之前。
+  - 呼叫函數時，允許使用關鍵字形式指定參數（例如 `name="Alice"`）。
+
+#### 範例
+```rust
+fn greet(greeting: string, name: string = "Guest") -> string {
+    return greeting + ", " + name
+}
+println(greet("Hello"))                  // 輸出 "Hello, Guest"
+println(greet("Hello", name="Alice"))      // 輸出 "Hello, Alice"
+```
 
 ---
 
 ## 9. 結構體與介面
 
 ### 9.1 Struct 結構體
-- 使用 `struct` 宣告結構體。  
-- 成員首字母大寫表示公開，首字母小寫表示私有。
+- 使用 `struct` 宣告結構體。
+- 結構體成員中，首字母大寫表示公開，首字母小寫表示私有。
+- **支持預設值**：結構體成員可以設定預設值，當建立實例時若未指定則使用預設值。
 
 #### 範例
 ```rust
 struct User {
-    Name: string,  // 公開
-    age: int,      // 私有
+    Name: string = "Unknown",  // 預設值 "Unknown"
+    age: int,                  // 無預設值，必須指定
 }
+user := User { age: 30 }
+println(user.Name)  // 輸出 "Unknown"
+```
+
+#### 9.1.1 Struct 繼承
+- Glux 統一使用 `extends` 來實現結構體繼承，不支持嵌入。
+- 若子結構與父結構有同名屬性，必須使用關鍵字 **override** 明確標示覆寫；否則編譯器報錯。
+
+##### 範例：使用 extends
+```rust
+struct Person {
+    Name: string,
+    age: int,
+}
+struct Employee extends Person {
+    override Name: string,  // 覆寫父類 Name
+    employeeId: int,
+}
+emp := Employee { Name: "Alice", age: 30, employeeId: 1001 }
+println(emp.Name)  // 使用 Employee 中覆寫的 Name
 ```
 
 ### 9.2 Interface 介面
-- 使用 `interface` 宣告介面，定義一組方法簽名。  
-- 任何型別只要實作這些方法，即隱式實作該介面，無需額外聲明。
+- 使用 `interface` 宣告介面，定義一組方法簽名。
+- 介面支持透過 `extends` 繼承其他介面，合併多個介面的功能。
 
 #### 範例
 ```rust
 interface Reader {
     read() -> string
 }
-struct FileReader {
+interface Writer {
+    write(s: string)
+}
+interface ReadWriter extends Reader, Writer { }
+struct FileReadWriter {
     fileName: string,
 }
-fn (fr FileReader) read() -> string {
-    // 實作讀取檔案邏輯
-    return "檔案內容"
-}
-fn printReader(r Reader) {
-    println(r.read())
-}
-fileReader := FileReader{"data.txt"}
-printReader(fileReader)
+fn (fr FileReadWriter) read() -> string { return "檔案內容" }
+fn (fr FileReadWriter) write(s: string) { println("寫入: " + s) }
+fn printReadWriter(rw ReadWriter) { println(rw.read()) }
+fileReadWriter := FileReadWriter { fileName: "data.txt" }
+printReadWriter(fileReadWriter)
 ```
 
 ---
@@ -486,7 +483,6 @@ printReader(fileReader)
 ## 10. 內置函式：copy() 與 error()
 
 - **copy()**：對集合、結構體或其他複合型別進行深拷貝，返回一個新物件，不共享記憶體。
-
   ```rust
   originalList := [1, 2, 3]
   copiedList := copy(originalList)
@@ -495,8 +491,7 @@ printReader(fileReader)
   println(copiedList)    // 輸出 [1, 2, 3, 4]
   ```
 
-- **error()**：生成一個 error 型別的錯誤物件，通常接受錯誤訊息字串作為參數，用於錯誤處理。
-
+- **error()**：生成一個 error 型別的錯誤物件，通常接受一個錯誤訊息字串作為參數，用於錯誤處理。
   ```rust
   fn try_parse_int(s: string) -> union<int, error> {
       if s == "42" { return 42 }
@@ -508,14 +503,14 @@ printReader(fileReader)
 
 ## 11. 指標操作
 
-- 使用 `&` 取得變數指標，使用 `*` 解參考。例如：
+- 使用 `&` 取得變數指標，使用 `*` 解參考：
   ```rust
   x := 10
   p := &x  // p 為 ptr<int>
   println(*p)  // 輸出 10
   ```
 - **注意：** 所有指標運算（如 `+`、`-`、`<<`、`>>` 等）必須在 `unsafe { }` 區塊中執行。
-- 當使用點運算子（`.`）存取 struct、array、list、tuple 成員時，若成員為指標，Glux 會自動解參考，無需手動使用 `*`。
+- 當使用點運算子（`.`）存取 struct、array、list、tuple 成員時，若該成員為指標，Glux 會自動解參考。
 
 ---
 
@@ -537,21 +532,21 @@ printReader(fileReader)
 - **`not`** 或 **`!`**：邏輯非。
 
 ### 位元運算符
-- **`&`**、**`|`**、**`^`**、**`~`**：分別用於位元與、或、異或、取反。  
-  - 取地址時，`&` 用於取得變數指標。
+- **`&`**、**`|`**、**`^`**、**`~`**：分別用於位元與、或、異或、取反。
+  - 當作取地址運算符時，`&` 用於取得變數指標。
 
 ### 位移運算符
-- **`<<`**、**`>>`**：分別用於左移與右移。  
-  - 注意：必須在 `unsafe { }` 區塊中執行。
+- **`<<`**、**`>>`**：左移與右移。
+  - 必須在 `unsafe { }` 區塊中執行。
 
 ### 賦值運算符
 - **`:=`**：宣告並初始化變數。
 - **`=`**：對已宣告變數賦值。
-- 複合賦值：例如 **`+=`**、**`-=`**、**`*=`** 等。
+- 複合賦值運算符，如 **`+=`**、**`-=`**、**`*=`**、**`/=`**、**`%=`**。
 
 ### 其他運算符
 - **`.`**：點運算子，用於存取結構體或複合型別成員，會自動解指標。
-- **`,`**：逗號，用於分隔參數、tuple 成員等。
+- **`,`**：逗號，用於分隔函式參數、tuple 成員等。
 
 ---
 
@@ -582,14 +577,17 @@ b := bool(1)
 ✅ **集合型別支援異質性，不需指定內部元素型別（如 list 而非 list<int>）**  
 ✅ **值與引用傳遞依據型別特性，自動選擇最合適的傳遞方式**  
 ✅ **內置 copy() 支援深拷貝**  
-✅ **支援 struct 與 interface，實現隱式介面實作**  
+✅ **支援 struct 與 interface，並提供繼承/擴展功能**  
+   - Struct 使用 `extends` 實現繼承，並使用 **override** 關鍵字明確覆寫同名屬性。
+   - Interface 可使用 `extends` 擴展其他介面，組合多個介面的方法簽名。
 ✅ **函數回傳型別可利用 tuple 與 union 進行多值回傳與錯誤處理**  
    - 使用 tuple 表示同時返回多個值（例如 `(int, int)`）。
-   - 使用 union 表示回傳結果可能是成功型別 T 或錯誤型別 error（例如 `union<(int, string), error>`），並保持與單獨 tuple 回傳寫法一致。
+   - 使用 union 表示回傳結果可能是成功型別 T 或錯誤型別 error（例如 `union<(int, string), error>`），並保持與 tuple 回傳寫法一致。
    - 內置函式 **is_error()** 用於快速檢查 union<T, error> 的錯誤狀態，正常情況下可直接使用。
 ✅ **內置 error 型別與 error() 函式用於錯誤處理**  
 ✅ **指標操作在任何地方可取指與解參考，但所有指標運算必須在 unsafe 區塊中進行；點運算子會自動解指標**  
 ✅ **內置強制類型轉換函式 int()、float()、bool() 提供顯式型別轉換**  
+✅ **函數參數可有預設值，無預設值的參數必須放在有預設值參數之前；支持使用關鍵字形式呼叫函數**  
 ✅ **比 Python 更快，比 Go 更靈活，比 Rust 更易學**
 
 這是一門 **高效能、易學、支援併發** 的語言，適用於系統開發、後端服務、資料處理等領域。 🚀
