--- a/語言規範.md
+++ b/語言規範.md
@@ -4,12 +4,22 @@ Glux 是一門 **簡單、高效、省記憶體、支援併發、可編譯為二
 
 ---
 
+## 保留字
+
+以下是 Glux 的保留字，這些關鍵字在語言中具有固定用途，不能作為變數或識別符名稱：
+
+```
+and, any, bool, const, copy, else, error, extends, false, float, fn, for, if, in, int, interface, is_error, len, list, map, not, optional, or, ptr, print, println, return, sleep, spawn, string, struct, true, tuple, union, unsafe, await, while, override
+```
+
+---
+
 ## 1. 語法規範
 
 ### 1.1 變數與常數
-- 變數使用 `:=` 進行宣告，類似 Go 的簡潔語法，支援型別推導。
-- 常數使用 `const`，允許在編譯時或執行時決定數值。
-- **支援連續比較運算**（如 `0 < x < 8`），語意等同於 `0 < x && x < 8`。
+- **變數**：使用 `:=` 進行宣告，支援型別推導（類似 Go）。
+- **常數**：使用 `const` 宣告，允許在編譯或執行時決定數值。
+- **連續比較運算**：例如 `0 < x < 8`，等同於 `0 < x && x < 8`。
 
 #### 範例
 ```rust
@@ -24,8 +34,8 @@ const PI = 3.1415  // 常數
 ### 1.2 型別系統
 
 - **自動調整數值型別**  
-  Glux 會根據整數或浮點數的數值範圍，自動選擇**能容納該數值的最小型別**。
-  
+  Glux 會根據整數或浮點數的數值範圍，自動選擇能容納該數值的最小型別。
+
   #### 整數 (int)
   - **int8**：範圍 -128 ~ 127  
     例：`x := 10`（若數值落在 int8 範圍內）
@@ -34,24 +44,25 @@ const PI = 3.1415  // 常數
   - **int32**：範圍 -2,147,483,648 ~ 2,147,483,647  
     例：`z := 2_000_000_000`（自動推導為 int32）
   - **int64**：範圍 -9,223,372,036,854,775,808 ~ 9,223,372,036,854,775,807  
-    若數值超出 int32 範圍且在 int64 內，則自動推導為 int64.
-  
+    若超出 int32 且在 int64 內，則自動推導為 int64.
+
   #### 浮點數 (float)
   - **float32**：32 位 IEEE 754 浮點數，精度約 7 位有效數字  
-    當數值適中且精度要求不高時，採用 float32.
+    適用於數值適中且精度要求不高的情況。
   - **float64**：64 位 IEEE 754 浮點數，精度約 15 位有效數字  
-    當數值較大或需要更高精度時，自動推導為 float64.
-  
+    適用於較大數值或需要更高精度的情況。
+
 - **內置錯誤型別 error**  
-  Glux 內置錯誤型別 **error**，用於表示錯誤狀態與錯誤訊息，通常與 union 搭配使用實現錯誤處理。
-  
+  用於表示錯誤狀態與錯誤訊息，通常與 union 搭配使用實現錯誤處理。
+
 - **集合型別支援異質性**  
   集合型別（如 tuple、list、array、map）不需要指定內部元素型別，允許同時存放不同型別的值。例如：
   ```rust
   mixedList := [10, "hello", 3.14]  // list 可包含不同型別
   ```
+
 - **內建函式 `string()`**  
-  可轉換任何型別為字串（此為內置函式之一，與 `sleep()`、`len()` 同級）。
+  可將任何型別轉換為字串（與 `sleep()`、`len()` 同級）。
 
 #### 範例
 ```rust
@@ -86,8 +97,9 @@ largeFloat := 3.141592653589793  // 推導為 float64
 ---
 
 ### 1.3 控制流程
+
 - `if`、`while` 條件表達式無需括號 `()`。
-- **支援連續比較運算**（如 `0 < x < 8`），提高可讀性。
+- **支援連續比較運算**（如 `0 < x < 8`）。
 - `for` 使用 `range()` 迭代，不支援傳統 `for (init; condition; update)`。
 
 #### 範例
@@ -129,39 +141,39 @@ for key, value in {"a": 1, "b": 2} {
 - **`not`** 或 **`!`**：邏輯非。
 
 ### 位元運算符
-- **`&`**、**`|`**、**`^`**、**`~`**：分別用於位元與、或、異或、取反。  
+- **`&`**、**`|`**、**`^`**、**`~`**：用於位元與、或、異或、取反。  
   - 當作取地址運算符時，`&` 用於取得變數指標。
 
 ### 位移運算符
 - **`<<`**、**`>>`**：分別用於左移與右移。  
-  - 注意：必須在 `unsafe { }` 區塊中執行。
+  - 必須在 `unsafe { }` 區塊中執行。
 
 ### 賦值運算符
 - **`:=`**：宣告並初始化變數。
 - **`=`**：對已宣告變數賦值。
-- 複合賦值運算符，如 **`+=`**、**`-=`**、**`*=`**、**`/=`**、**`%=`**。
+- 複合賦值運算符（如 **`+=`**、**`-=`**、**`*=`**、**`/=`**、**`%=`**）。
 
 ### 其他運算符
 - **`.`**：點運算子，用於存取結構體或複合型別成員，會自動解指標。
-- **`,`**：逗號，用於分隔參數、tuple 成員等。
+- **`,`**：逗號，用於分隔函式參數、tuple 成員等。
 
 ---
 
-## 3. 標準函式
+## 3. 標準函式與強制類型轉換
 
 ### 3.1 內置函式
 內置函式包含常用工具，例如：
 - **string()**：轉換任何型別為字串。
 - **sleep()**：暫停執行，適用於併發與計時操作。
 - **len()**：計算集合（如 list、array、map、tuple）或字串長度。
-- **copy()**：對集合、結構體或其他複合型別進行深拷貝，返回一個與原物件不共享記憶體的新物件。
-- **error()**：生成一個 error 型別的錯誤物件，通常接受一個錯誤訊息字串作為參數。
+- **copy()**：進行深拷貝，返回與原物件不共享記憶體的新物件。
+- **error()**：生成一個 error 型別的錯誤物件，接受錯誤訊息字串作為參數。
 - **int()**、**float()**、**bool()**：強制將其他型別轉換為 int、float 或 bool。
 
 ### 3.2 `print()` 與 `println()`
 - **`print()`**：輸出字串但不換行。
 - **`println()`**：輸出字串並自動換行。
-- 支援 `${}` 字串插值；使用反引號（`）處理插值。
+- 支援 `${}` 字串插值；使用反引號（`）進行插值處理。
 
 #### 範例
 ```rust
@@ -189,16 +201,22 @@ println("List:", nums)
 
 ---
 
-## 4. 可見性
+## 4. 參數傳遞語意
 
-- **首字母大寫公開，小寫私有**，與 Go 規範一致，不使用 `public` 或 `private` 關鍵字。
+- **值傳遞**：基本型別（如 int、float、bool）預設值傳遞。
+- **引用傳遞**：複合型別（如 string、list、array、map、tuple、struct 等）預設引用傳遞，僅傳遞物件的引用。
+- 若有特殊需求，可透過顯式語法指定傳遞方式。
+- **函數參數預設值**：
+  - 允許函數參數具有預設值，但**無預設值的參數必須放在有預設值參數之前**。
+  - 支持使用關鍵字形式呼叫函數（例如 `name="Alice"`）。
 
 #### 範例
 ```rust
-struct User {
-    Name: string,  // 公開
-    age: int,      // 私有
+fn greet(greeting: string, name: string = "Guest") -> string {
+    return greeting + ", " + name
 }
+println(greet("Hello"))                  // 輸出 "Hello, Guest"
+println(greet("Hello", name="Alice"))      // 輸出 "Hello, Alice"
 ```
 
 ---
@@ -206,22 +224,21 @@ struct User {
 ## 5. 函式與閉包
 
 ### 5.1 基本函式語法
-- 使用 `fn` 宣告函式，回傳型別用 `->` 指定。
-- 可選回傳型別，若省略則根據 `return` 自動推導。
-- 支援預設參數，且 **無預設值的參數必須放在有預設值的參數之前**；函數呼叫時允許使用關鍵字方式（例如 `param=value`）指定參數。
+- 使用 `fn` 宣告函式，回傳型別使用 `->` 指定。
+- 可選回傳型別（若省略則根據 `return` 自動推導）。
+- 支援預設參數，並允許使用關鍵字呼叫。
 - 函式可作為變數、參數與回傳值。
 
 #### 範例
 ```rust
-fn greet(greeting: string, name: string = "Guest") -> string {
-    return greeting + ", " + name
+fn add(x: int, y: int) -> int {
+    return x + y
 }
-println(greet("Hello"))                  // 使用預設值，輸出 "Hello, Guest"
-println(greet("Hello", name="Alice"))      // 使用關鍵字參數，輸出 "Hello, Alice"
+println(add(2, 3))
 ```
 
 ### 5.2 匿名函式（Lambda）
-- 使用 `fn` 宣告匿名函式，可直接賦值給變數，並作為參數傳遞。
+- 使用 `fn` 宣告匿名函式，可直接賦值給變數並作為參數傳遞。
 
 #### 範例
 ```rust
@@ -306,13 +323,14 @@ println(map([1, 2, 3, 4], fn(x: int) -> int { return x * x }))
   if is_error(result) { println("解析錯誤") }
   else { println(`成功: ${result}`) }
   ```
-  為保持與 tuple 回傳寫法一致，建議使用括號明確表示，如 union<(int, string), error>。  
+  建議使用括號明確表示，如 union<(int, string), error>。  
   內置函式 **is_error()** 用於快速檢查 union<T, error> 的錯誤狀態，正常情況下 union 值可直接當作 T 使用。
 
 ---
 
-## 6. 併發機制
+## 6. 併發機制與 await 回傳值規範
 
+### 6.1 併發機制
 - 使用 `spawn fn` 啟動輕量執行緒，類似 Goroutine。
 - 併發任務不會隱式等待，必須使用 `await` 顯式同步。
 - `await` 可同時等待多個任務（類似 Promise.all()）。
@@ -333,14 +351,12 @@ await work1(), work2()
 println("所有工作結束")
 ```
 
----
+### 6.2 await 回傳值規範
 
-## 7. `await` 回傳值規範
-
-### 7.1 單一 `await`
+#### 6.2.1 單一 await
 - 等待單一函式完成並回傳結果。
 
-#### 範例
+##### 範例
 ```rust
 spawn fn get_data() -> int {
     sleep(1)
@@ -350,10 +366,10 @@ result := await get_data()
 println(`結果: ${result}`)
 ```
 
-### 7.2 多個 `await`
-- 同時等待多個函式，回傳一個 tuple，順序與函式呼叫一致。
+#### 6.2.2 多個 await
+- 同時等待多個函式，回傳一個 tuple，順序與呼叫一致。
 
-#### 範例
+##### 範例
 ```rust
 spawn fn task1() -> string {
     sleep(1)
@@ -367,10 +383,10 @@ results := await task1(), task2()
 println(`結果: ${results}`)
 ```
 
-### 7.3 內建錯誤處理
+#### 6.2.3 內建錯誤處理
 - 若某函式發生錯誤，回傳 `error<T>`（類似 Rust 的 `Result<T, E>`）；可選使用 `try` 捕獲錯誤。
 
-#### 範例
+##### 範例
 ```rust
 spawn fn fail_task() -> int {
     sleep(1)
@@ -384,10 +400,10 @@ if result is error {
 }
 ```
 
-### 7.4 用於迴圈
+#### 6.2.4 用於迴圈
 - 使用 `for` 迭代 `await` 回傳的結果（tuple）。
 
-#### 範例
+##### 範例
 ```rust
 tasks := [task1(), task2(), task3()]
 for result in await tasks {
@@ -400,64 +416,32 @@ for result in await tasks {
 
 ---
 
-## 8. 參數傳遞語意
+## 7. 結構體與介面
 
-- **值傳遞**：基本型別（如 int、float、bool）預設值傳遞（記憶體小，複製成本低）。
-- **引用傳遞**：複合型別（如 string、list、array、map、tuple、struct 等）預設引用傳遞，僅傳遞物件的引用，節省記憶體與提高效能。
-- 若有特殊需求，可透過顯式語法指定傳遞方式。
-- **函數參數預設值**：
-  - 允許函數參數具有預設值，提供預設值的參數在呼叫時可省略，但無預設值的參數必須放在有預設值參數之前。
-  - 呼叫函數時，允許使用關鍵字形式指定參數（例如 `name="Alice"`）。
-
-#### 範例
-```rust
-fn greet(greeting: string, name: string = "Guest") -> string {
-    return greeting + ", " + name
-}
-println(greet("Hello"))                  // 輸出 "Hello, Guest"
-println(greet("Hello", name="Alice"))      // 輸出 "Hello, Alice"
-```
-
----
-
-## 9. 結構體與介面
-
-### 9.1 Struct 結構體
+### 7.1 Struct 結構體
 - 使用 `struct` 宣告結構體。
 - 結構體成員中，首字母大寫表示公開，首字母小寫表示私有。
-- **支持預設值**：結構體成員可以設定預設值，當建立實例時若未指定則使用預設值。
+- **支持預設值**：結構體屬性可以指定預設值，當建立實例時若未指定則使用預設值。
+- **結構體繼承**：統一使用 `extends` 來實現繼承（不支持嵌入）。  
+  若子結構與父結構存在同名屬性，必須使用 **override** 關鍵字明確覆寫，否則編譯器將報錯。
 
 #### 範例
-```rust
-struct User {
-    Name: string = "Unknown",  // 預設值 "Unknown"
-    age: int,                  // 無預設值，必須指定
-}
-user := User { age: 30 }
-println(user.Name)  // 輸出 "Unknown"
-```
-
-#### 9.1.1 Struct 繼承
-- Glux 統一使用 `extends` 來實現結構體繼承，不支持嵌入。
-- 若子結構與父結構有同名屬性，必須使用關鍵字 **override** 明確標示覆寫；否則編譯器報錯。
-
-##### 範例：使用 extends
 ```rust
 struct Person {
     Name: string,
     age: int,
 }
 struct Employee extends Person {
-    override Name: string,  // 覆寫父類 Name
+    override Name: string,  // 明確覆寫父類中的 Name 屬性
     employeeId: int,
 }
 emp := Employee { Name: "Alice", age: 30, employeeId: 1001 }
 println(emp.Name)  // 使用 Employee 中覆寫的 Name
 ```
 
-### 9.2 Interface 介面
+### 7.2 Interface 介面
 - 使用 `interface` 宣告介面，定義一組方法簽名。
-- 介面支持透過 `extends` 繼承其他介面，合併多個介面的功能。
+- 介面支持使用 `extends` 擴展其他介面，組合多個介面的方法簽名。
 
 #### 範例
 ```rust
@@ -480,30 +464,9 @@ printReadWriter(fileReadWriter)
 
 ---
 
-## 10. 內置函式：copy() 與 error()
+## 8. 指標操作
 
-- **copy()**：對集合、結構體或其他複合型別進行深拷貝，返回一個新物件，不共享記憶體。
-  ```rust
-  originalList := [1, 2, 3]
-  copiedList := copy(originalList)
-  copiedList.append(4)
-  println(originalList)  // 輸出 [1, 2, 3]
-  println(copiedList)    // 輸出 [1, 2, 3, 4]
-  ```
-
-- **error()**：生成一個 error 型別的錯誤物件，通常接受一個錯誤訊息字串作為參數，用於錯誤處理。
-  ```rust
-  fn try_parse_int(s: string) -> union<int, error> {
-      if s == "42" { return 42 }
-      else { return error("無法解析為整數") }
-  }
-  ```
-
----
-
-## 11. 指標操作
-
-- 使用 `&` 取得變數指標，使用 `*` 解參考：
+- 使用 `&` 取得變數的指標，使用 `*` 進行解參考：
   ```rust
   x := 10
   p := &x  // p 為 ptr<int>
@@ -514,43 +477,7 @@ printReadWriter(fileReadWriter)
 
 ---
 
-## 12. 運算符定義
-
-### 算術運算符
-- **`+`**：加法或字串串接。
-- **`-`**：減法。
-- **`*`**：乘法。
-- **`/`**：除法。
-- **`%`**：取餘。
-
-### 比較運算符
-- **`==`**、**`!=`**、**`<`**、**`<=`**、**`>`**、**`>=`**：檢查相等或大小關係。
-
-### 邏輯運算符
-- **`and`** 或 **`&&`**：邏輯與。
-- **`or`** 或 **`||`**：邏輯或。
-- **`not`** 或 **`!`**：邏輯非。
-
-### 位元運算符
-- **`&`**、**`|`**、**`^`**、**`~`**：分別用於位元與、或、異或、取反。
-  - 當作取地址運算符時，`&` 用於取得變數指標。
-
-### 位移運算符
-- **`<<`**、**`>>`**：左移與右移。
-  - 必須在 `unsafe { }` 區塊中執行。
-
-### 賦值運算符
-- **`:=`**：宣告並初始化變數。
-- **`=`**：對已宣告變數賦值。
-- 複合賦值運算符，如 **`+=`**、**`-=`**、**`*=`**、**`/=`**、**`%=`**。
-
-### 其他運算符
-- **`.`**：點運算子，用於存取結構體或複合型別成員，會自動解指標。
-- **`,`**：逗號，用於分隔函式參數、tuple 成員等。
-
----
-
-## 13. 強制類型轉換
+## 9. 強制類型轉換
 
 Glux 提供以下內置函式進行顯式型別轉換：
 - **int()**：轉換為 int。
@@ -567,7 +494,7 @@ b := bool(1)
 
 ---
 
-## 14. 語言特性總結
+## 10. 語言特性總結
 
 ✅ **簡單直覺，語法比 Go / Rust 更簡潔**  
 ✅ **支援 `0 < x < 8` 連續比較運算**  
@@ -587,7 +514,9 @@ b := bool(1)
 ✅ **內置 error 型別與 error() 函式用於錯誤處理**  
 ✅ **指標操作在任何地方可取指與解參考，但所有指標運算必須在 unsafe 區塊中進行；點運算子會自動解指標**  
 ✅ **內置強制類型轉換函式 int()、float()、bool() 提供顯式型別轉換**  
-✅ **函數參數可有預設值，無預設值的參數必須放在有預設值參數之前；支持使用關鍵字形式呼叫函數**  
+✅ **函數參數可有預設值，無預設值的參數必須放在有預設值的參數之前；支持使用關鍵字形式呼叫函數**  
 ✅ **比 Python 更快，比 Go 更靈活，比 Rust 更易學**
 
 這是一門 **高效能、易學、支援併發** 的語言，適用於系統開發、後端服務、資料處理等領域。 🚀
+
+---
