--- a/語言規範.md
+++ b/語言規範.md
@@ -494,29 +494,80 @@ b := bool(1)
 
 ---
 
-## 10. 語言特性總結
+## 11. 記憶體管理機制
 
-✅ **簡單直覺，語法比 Go / Rust 更簡潔**  
-✅ **支援 `0 < x < 8` 連續比較運算**  
-✅ **`print()` 與 `println()` 分離，符合直覺**  
-✅ **併發比 Go 更靈活，允許 `await` 多個任務**  
-✅ **比 C / Go 更節省記憶體（數值型別自動擴展至 int64/float64，預設使用最小型別）**  
-✅ **集合型別支援異質性，不需指定內部元素型別（如 list 而非 list<int>）**  
-✅ **值與引用傳遞依據型別特性，自動選擇最合適的傳遞方式**  
-✅ **內置 copy() 支援深拷貝**  
-✅ **支援 struct 與 interface，並提供繼承/擴展功能**  
-   - Struct 使用 `extends` 實現繼承，並使用 **override** 關鍵字明確覆寫同名屬性。
-   - Interface 可使用 `extends` 擴展其他介面，組合多個介面的方法簽名。
-✅ **函數回傳型別可利用 tuple 與 union 進行多值回傳與錯誤處理**  
-   - 使用 tuple 表示同時返回多個值（例如 `(int, int)`）。
-   - 使用 union 表示回傳結果可能是成功型別 T 或錯誤型別 error（例如 `union<(int, string), error>`），並保持與 tuple 回傳寫法一致。
-   - 內置函式 **is_error()** 用於快速檢查 union<T, error> 的錯誤狀態，正常情況下可直接使用。
-✅ **內置 error 型別與 error() 函式用於錯誤處理**  
-✅ **指標操作在任何地方可取指與解參考，但所有指標運算必須在 unsafe 區塊中進行；點運算子會自動解指標**  
-✅ **內置強制類型轉換函式 int()、float()、bool() 提供顯式型別轉換**  
-✅ **函數參數可有預設值，無預設值的參數必須放在有預設值的參數之前；支持使用關鍵字形式呼叫函數**  
-✅ **比 Python 更快，比 Go 更靈活，比 Rust 更易學**
+Glux 採用一種**混合式記憶體管理機制**，主要由兩大部分構成：
 
-這是一門 **高效能、易學、支援併發** 的語言，適用於系統開發、後端服務、資料處理等領域。 🚀
+### 11.1 區域作用域回收（Scoped Memory Reclamation, SMR）
+
+- **核心概念**：  
+  所有局部變數或在固定作用域內建立的物件，均會在離開其作用域時自動釋放記憶體，無需額外手動釋放。這意味著函式內或區塊內建立的變數，當控制流離開其作用域後，即自動回收，類似於 C++ 的 RAII 或 Rust 的自動釋放，但不需要手動標記或移動操作。
+
+- **適用範圍**：  
+  適用於大部分局部變數及靜態分配的物件，不適用於需要跨越作用域（如動態資料結構）管理的物件。
+
+- **示例**：
+  ```glux
+  fn example() {
+      data := Data()      // data 在 example() 作用域內
+      {
+          temp := Data()  // temp 局部於此區塊
+      } // 區塊結束，temp 自動回收
+  } // example() 結束，data 自動回收
+  ```
+
+### 11.2 隱式引用計數（Implicit Reference Counting, IRC）
+
+- **核心概念**：  
+  對於需要在多個作用域或動態資料結構中共享的物件，Glux 採用隱式引用計數技術。當物件被多個變數或資料結構引用時，系統會自動維護引用計數，當引用計數降至 0 時，自動釋放該物件的記憶體。
+
+- **適用範圍**：  
+  主要用於需要動態分配且生命週期無法由固定作用域管理的情況，例如鏈結串列、樹狀結構等。
+
+- **循環引用問題**：  
+  為避免多個物件之間形成循環引用導致記憶體無法回收，Glux 支援**弱引用**（Weak Pointer），使得不影響引用計數的弱關聯可以被建立，用於指向已由 IRC 管理的物件。
+
+- **示例**：
+  ```glux
+  // 自動隱式管理引用計數，不需額外 retain/release 操作
+  node1 := Node()     
+  node2 := Node()
+  node1.next := node2   // node2 的引用計數隱式 +1
+  node1.next := null    // node2 的引用計數隱式 -1，若降至 0 則自動釋放
+  ```
+
+### 11.3 指標支援與智慧指標
+
+為確保指標操作的安全性與自動管理，Glux 定義了以下智慧指標類型：
+
+- **ScopedPtr&lt;T&gt;**：  
+  用於指向在固定作用域內分配的物件，當變數離開作用域時，自動釋放記憶體。  
+  適用於局部變數或獨佔所有權的物件。
+
+- **SharedPtr&lt;T&gt;**：  
+  用於指向需要在多個地方共享的物件，採用隱式引用計數（IRC）機制，自動管理記憶體釋放。  
+  適用於動態資料結構及跨作用域共享的物件。
+
+- **WeakPtr&lt;T&gt;**：  
+  用於建立不增加引用計數的弱引用，避免循環引用導致記憶體洩漏。  
+  當目標物件被釋放後，弱引用將自動失效。
+
+指標運算（如取址 `&`、解參考 `*`）均受 Glux 記憶體管理機制保護，所有指標運算操作仍必須在 `unsafe { }` 區塊中進行，但點運算子（`.`）在存取結構體或複合型別成員時會自動解參考。
+
+---
+
+### 11.4 綜合特性與優勢
+
+- **自動回收**：  
+  局部變數利用 SMR 於離開作用域時自動釋放，避免 GC 卡頓；動態物件則使用 IRC 實現即時釋放，降低記憶體洩漏風險。
+
+- **透明性**：  
+  記憶體管理對開發者透明，無需額外手動管理記憶體，也不需要顯式使用 `free` 或 `delete`。
+
+- **高效能**：  
+  即時回收機制使得記憶體分配與釋放具有極低的開銷，同時支援併發運行不會產生 GC 暫停。
+
+- **簡化指標操作**：  
+  透過 ScopedPtr、SharedPtr 與 WeakPtr，提供了安全且自動化的指標管理方式，使得指標操作既高效又降低出錯風險。
 
 ---
