新增三元運算子說明，修正併發機制文檔中的範例，更新 LLVM 代碼生成器以支持成員訪問與結果存儲，強化對 spawn 和 await 表達式的處理

--- a/語言規範.md
+++ b/語言規範.md
@@ -153,6 +153,22 @@ for key, value in {"a": 1, "b": 2} {
 - **`=`**：對已宣告變數賦值。
 - 複合賦值運算符（如 **`+=`**、**`-=`**、**`*=`**、**`/=`**、**`%=`**）。
 
+### 三元運算子
+- **語法**：  
+  ```glux
+  result := condition ? value_if_true : value_if_false
+  ```
+- **說明**：  
+  當 `condition` 為真時，運算式回傳 `value_if_true`；否則回傳 `value_if_false`。  
+  三元運算子是一個表達式，能夠嵌入其他運算式中使用，使得簡單條件判斷更為簡潔。
+  
+- **範例**：
+  ```glux
+  x := 5
+  status := x > 0 ? "正數" : "非正數"
+  println(`x 為 ${status}`)
+  ```
+
 ### 其他運算符
 - **`.`**：點運算子，用於存取結構體或複合型別成員，會自動解指標。
 - **`,`**：逗號，用於分隔函式參數、tuple 成員等。
@@ -331,23 +347,23 @@ println(map([1, 2, 3, 4], fn(x: int) -> int { return x * x }))
 ## 6. 併發機制與 await 回傳值規範
 
 ### 6.1 併發機制
-- 使用 `spawn fn` 啟動輕量執行緒，類似 Goroutine。
+- 使用 `spawn` 啟動輕量執行緒，類似 Goroutine。
 - 併發任務不會隱式等待，必須使用 `await` 顯式同步。
 - `await` 可同時等待多個任務（類似 Promise.all()）。
 
 #### 範例
 ```rust
-spawn fn work1() {
+fn work1() {
     println("工作 1 開始")
     sleep(1)
     println("工作 1 結束")
 }
-spawn fn work2() {
+fn work2() {
     println("工作 2 開始")
     sleep(2)
     println("工作 2 結束")
 }
-await work1(), work2()
+await spawn work1(), spawn work2()
 println("所有工作結束")
 ```
 
@@ -358,11 +374,11 @@ println("所有工作結束")
 
 ##### 範例
 ```rust
-spawn fn get_data() -> int {
+get_data := spawn fn() -> int {
     sleep(1)
     return 42
-}
-result := await get_data()
+}()
+result := await get_data
 println(`結果: ${result}`)
 ```
 
@@ -371,15 +387,15 @@ println(`結果: ${result}`)
 
 ##### 範例
 ```rust
-spawn fn task1() -> string {
+task1 := spawn fn() -> string {
     sleep(1)
     return "A"
-}
-spawn fn task2() -> string {
+}()
+task2 := spawn fn() -> string {
     sleep(2)
     return "B"
-}
-results := await task1(), task2()
+}()
+results := await task1, task2
 println(`結果: ${results}`)
 ```
 
@@ -388,11 +404,11 @@ println(`結果: ${results}`)
 
 ##### 範例
 ```rust
-spawn fn fail_task() -> int {
+fail_task := spawn fn() -> int {
     sleep(1)
     return error("任務失敗")
-}
-result := await fail_task()
+}()
+result := await fail_task
 if result is error {
     println(`錯誤: ${result}`)
 } else {
@@ -405,7 +421,7 @@ if result is error {
 
 ##### 範例
 ```rust
-tasks := [task1(), task2(), task3()]
+tasks := [task1, task2, task3]
 for result in await tasks {
     println(`結果: ${result}`)
 }
