更新保留字列表，新增對條件表達式（三元運算符）的支持，並強化 LLVM 代碼生成器以處理條件跳轉邏輯

--- a/語言規範.md
+++ b/語言規範.md
@@ -9,7 +9,7 @@ Glux 是一門 **簡單、高效、省記憶體、支援併發、可編譯為二
 以下是 Glux 的保留字，這些關鍵字在語言中具有固定用途，不能作為變數或識別符名稱：
 
 ```
-and, any, bool, const, copy, else, error, extends, false, float, fn, for, if, in, int, interface, is_error, len, list, map, not, optional, or, ptr, print, println, return, sleep, spawn, string, struct, true, tuple, union, unsafe, await, while, override
+and, any, await, bool, const, copy, else, error, extends, false, float, fn, for, if, in, int, interface, is_error, len, list, map, not, optional, or, ptr, print, println, return, sleep, spawn, string, struct, true, tuple, union, unsafe, while, override
 ```
 
 ---
