新增保留字 `main` 以定義程式入口點，並更新相關文檔以說明其語法、執行條件及使用限制。

--- a/語言規範.md
+++ b/語言規範.md
@@ -9,7 +9,7 @@ Glux 是一門 **簡單、高效、省記憶體、支援併發、可編譯為二
 以下是 Glux 的保留字，這些關鍵字在語言中具有固定用途，不能作為變數或識別符名稱：
 
 ```
-and, any, await, bool, const, copy, else, error, extends, false, float, fn, for, if, in, int, interface, is_error, len, list, map, not, optional, or, ptr, print, println, return, sleep, spawn, string, struct, true, tuple, union, unsafe, while, override
+and, any, await, bool, const, copy, else, error, extends, false, float, fn, for, if, in, int, interface, is_error, len, list, main, map, not, optional, or, ptr, print, println, return, sleep, spawn, string, struct, true, tuple, union, unsafe, while, override
 ```
 
 ---
@@ -509,6 +509,38 @@ b := bool(1)
 ```
 
 ---
+
+## 10. 程式入口點
+
+Glux 語言採用由上至下的執行模式，因此一般情況下整個檔案的程式碼會依序執行。但為了讓開發者能夠明確區分當前檔案作為獨立執行時所需要執行的入口程式碼，Glux 定義了一個特殊的保留字 **main**，其語法規範如下：
+
+- **語法格式**：  
+  ```glux
+  main {
+      // 僅在作為入口檔時執行的程式碼
+  }
+  ```
+  注意：`main` 區塊後不需要小括號，僅使用一對大括號包住入口程式碼。
+
+- **執行條件**：  
+  當前檔案若作為程式的入口檔直接執行時，編譯器或執行環境會自動執行 `main` 區塊中的程式碼；若該檔案僅作為模組被引用，則 `main` 區塊的內容不會被自動執行。
+
+- **使用限制**：  
+  作為 Glux 的保留字，`main` 僅供定義入口區塊使用，開發者不可用作變數或其他識別符名稱。
+
+#### 範例
+```glux
+// 全域程式碼會由上至下執行
+println("這行程式碼無論如何都會執行")
+
+// 只有當此檔案為入口時，才會執行 main 區塊內的程式碼
+main {
+    println("此檔案作為入口檔執行")
+    // 其他初始化或專屬於入口檔的邏輯
+}
+```
+
+這樣的設計使得 Glux 既保留了由上至下執行的直覺性，也提供了與 Python 中 `if __name__ == "__main__":` 類似的功能，但避免了使用特殊變數。
 
 ## 11. 記憶體管理機制
 
