新增分號章節，說明在 Glux 中分號的可選性及建議使用方式，以提高程式碼簡潔性。

--- a/語言規範.md
+++ b/語言規範.md
@@ -14,6 +14,12 @@ and, await, const, else, extends, false, fn, for, from, if, import, in, interfac
 
 ---
 
+## 分號
+
+在 Glux 中，分號是可選的，但為了提高程式碼的簡潔性，建議每個語句後不要添加分號。
+
+---
+
 ## 1. 語法規範
 
 ### 1.1 變數與常數
